--- a/src/favorite.html
+++ b/src/favorite.html
@@ -3,17 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Favorite</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
+    <title>Document</title>
   </head>
-  <body>
-    <div>
-      <a href="./index.html">Home</a>
-      <a href="#">Favorite</a>
-      <a href="./checkout.html">Checkout</a>
-    </div>
-
-    <ul class="js-list"></ul>
-    <script type="module" src="./favorite.js"></script>
-  </body>
+  <body></body>
 </html>
