--- a/src/favorite.html
+++ b/src/favorite.html
@@ -5,5 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <a href="./index.html">Home</a>
+      <a href="#">Favorite</a>
+      <a href="./checkout.html">Checkout</a>
+    </div>
+
+    <input type="text" class="js-search" />
+
+    <ul class="js-list"></ul>
+
+    <script type="module" src="./favorite.js"></script>
+  </body>
 </html>
