add remove buttons to createmarkup

--- a/src/checkout.html
+++ b/src/checkout.html
@@ -8,8 +8,8 @@
   <body>
     <div>
       <a href="./index.html">Home</a>
-      <a href="#">Favorite</a>
-      <a href="./checkout.html">Checkout</a>
+      <a href="./favorite.html">Favorite</a>
+      <a href="#">Checkout</a>
     </div>
 
     <input type="text" class="js-search" />
